# orchidarium

./: .gitignore  .pre-commit-config.yaml  .tool-versions  Dockerfile  README.md  compose.yaml  pyproject.toml
.config/: .hadolint.yaml
.github/: settings.yml
conf/: lsusb.out  udev.rules
grafana/: config.ini
rules/: udev.rules
scripts/: .env.sh  generate-test-self-signed-certs.sh  setup.sh
src/orchidarium/: __init__.py  bus.py  entrypoint.py  main.py  support.py  utils.py
src/orchidarium/api/: __init__.py  health.py
src/orchidarium/lib/: bus.py  json.py  utils.py
src/orchidarium/publishers/: _base  _base.py  influxdb.py
src/orchidarium/sensors/: __init__.py  _base.py  humidity.py  soil.py
src/tests/healthcheck/data/: humidity_healthcheck.json
