[tool.poetry]
name = "orchidarium"
version = "0.0.1"
description = "Orchestration and scripts for publishing metrics from sensors in an orchidarium to InfluxDB for Grafana dashboards"
authors = ["Emma Doyle <emma.ann.doyle@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
