[tool.poetry]
name = "orchidarium"
version = "0.0.1"
description = "Orchestration and scripts for publishing metrics from sensors in an orchidarium to InfluxDB for Grafana dashboards"
authors = ["Emma Doyle <emma.ann.doyle@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyusb = "^1.3.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
mypy = "^1.18.2"
pylint = "^3.3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
